2003-06-02  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* docs/bnf_operations.txt :
	* docs/langspecs.txt :
	* main/operation.l :
	* main/operation.y :
	* samples/cwall_operations :

	  - Added a "compute" statement into the operations language to
	    separate computation from query evaluation.

	* lib/kb.cpp :

	  - Changed inheritance rules from :

	      holds(Se, A, O) <- holds(Sg, A, O) AND memb(Se, Sg)
              holds(S, Ae, O) <- holds(S, Ag, O) AND memb(Ae, Ag)
              holds(S, A, Oe) <- holds(S, A, Og) AND memb(Oe, Og)

	    to :

	      holds(Se, A, O) <- holds(Sg, A, O) AND memb(Se, Sg) AND NOT 
	      !holds(Se, A, O)

              holds(S, Ae, O) <- holds(S, Ag, O) AND memb(Ae, Ag) AND NOT
	      !holds(S, Ae, O)

              holds(S, A, Oe) <- holds(S, A, Og) AND memb(Oe, Og) AND NOT
	      !holds(S, A, Oe)

	    This addition allows group members to override group properties.
	    note that the negative properties cannot be overridden.


2003-05-29  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/kb.cpp :
	* lib/kb.h :

	  - Changes (including api) to allow apps to trigger computation
	    before queries.

	  - Took out useless condition to close inittab, transtab and
	    consttab. Now a more general close_kb() is used.

	* main/operation.y :
	* main/program.y :

	  - Fixes to reflect above changes. Still computes models on the fly
	    at every query.

	* lib/wrapper.cpp :

	  - ask() now checks all possible models.

2003-05-28  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* main/vlad.cpp :
	* lib/Makefile.in :
	* main/Makefile :
	* main/operation.l :
	* main/operation.y :
	* main/parser.h :
	* main/program.l :
	* main/program.y :
	* lib/operation.l :
	* lib/operation.y :
	* lib/parser.h :
	* lib/program.l :
	* lib/program.y :

	  - Now parser is not part of the library. Moved parser and scanner
	    into main directory.

2003-05-14  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* Makefile.in :
	* rules.mk :
	* lib/Makefile.in :